--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "./node_modules/nodemon/bin/nodemon.js index.js"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,8 @@
     "faker": "^4.1.0",
     "moment": "^2.22.2",
     "puppeteer": "^1.8.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.2"
   }
 }
